# new-dapp-fullstack

./: README.md  package.json
apps/web/: .env.example
apps/web/src/components/: NFTGallery.tsx  TokenList.tsx
apps/web/src/hooks/: useChainData.ts  useProvider.ts
apps/web/src/lib/: client-factory.ts  data-client.ts  health-check.ts  provider-config.ts
contracts/cached-contract/: Cargo.toml
contracts/cached-contract/src/: lib.rs
contracts/mycontract/: Cargo.toml  STYLUS_SETUP.md
contracts/mycontract/src/: lib.rs
docs/: SMARTCACHE_INTEGRATION.md
docs/data/: chain-data.md
docs/frontend/: README.md
docs/rpc/: provider-setup.md
